// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`block layout when content provided 1`] = `
<div>
  <div
    class="nut-cell"
    style="border-radius: 6px; align-items: flex-start;"
  >
    <div
      class="nut-cell-body"
    >
      <div
        class="nut-cell-header"
        style="align-items: flex-start;"
      >
        <div
          class="nut-cell-title"
        >
          我是标题
        </div>
        <div
          class="nut-cell-extra"
        >
          辅助文案
        </div>
      </div>
      <div
        class="nut-cell-description"
      >
        我是描述
      </div>
      <div
        class="nut-cell-content"
      >
        <div
          class="custom-content"
        >
          可替换内容
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`icon renders before body 1`] = `
<div>
  <div
    class="nut-cell"
    style="border-radius: 6px; align-items: flex-start;"
  >
    <div
      class="nut-cell-icon"
    >
      <div
        class="custom-icon"
      />
    </div>
    <div
      class="nut-cell-body"
    >
      <div
        class="nut-cell-title"
      >
        我是标题
      </div>
    </div>
  </div>
</div>
`;

exports[`prop  1`] = `
<div>
  <div
    class="nut-cell"
    style="border-radius: 6px; align-items: flex-start;"
  >
    <div
      class="nut-cell-body"
    >
      <div
        class="nut-cell-title"
      >
        URL 跳转
      </div>
    </div>
    <div
      class="nut-cell-extra"
    >
      https://m.jd.com/
    </div>
  </div>
</div>
`;

exports[`prop title extra description test 1`] = `
<div>
  <div
    class="nut-cell"
    data-testid="prop"
    style="border-radius: 6px; align-items: flex-start;"
  >
    <div
      class="nut-cell-body"
    >
      <div
        class="nut-cell-title"
      >
        我是标题
      </div>
      <div
        class="nut-cell-description"
      >
        我是描述
      </div>
    </div>
    <div
      class="nut-cell-extra"
    >
      描述文字
    </div>
  </div>
</div>
`;

exports[`slot default test 1`] = `
<div>
  <div
    class="nut-cell"
    style="border-radius: 6px; align-items: flex-start;"
  >
    <div
      class="nut-cell-body"
    >
      <div
        class="nut-cell-title"
      >
        <div>
          自定义内容
        </div>
      </div>
    </div>
    <div
      class="nut-cell-extra"
    >
      描述文字
    </div>
  </div>
</div>
`;

exports[`slot extra 1`] = `
<div>
  <div
    class="nut-cell"
    style="border-radius: 6px; align-items: flex-start;"
  >
    <div
      class="nut-cell-body"
    >
      <div
        class="nut-cell-title"
      >
        Switch
      </div>
    </div>
    <div
      class="nut-cell-extra"
    >
      <div
        class="nut-switch"
        tabindex="0"
      >
        <div
          class="nut-switch-button nut-switch-button-open"
        />
      </div>
    </div>
  </div>
</div>
`;
